--- a/extjs/resources/Sencha-Examples/demo-files/demo.css
+++ b/extjs/resources/Sencha-Examples/demo-files/demo.css
@@ -108,9 +108,6 @@ p {
 .pvs, .pts {
 	padding-top: .25em;
 }
-.clearfix {
-	zoom: 1;
-}
 .unit {
 	float: left;
 }
@@ -141,7 +138,9 @@ p {
 	height: 1.5em;
 }
 #testDrive {
+	display: block;
 	padding-top: 24px;
+	line-height: 1.5;
 }
 .fs0 {
 	font-size: 16px;
